# simms

./: .gitignore  .readthedocs.yaml  AGENTS.md  CHANGES.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.rst  SECURITY.md  opencode_PRs.txt  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: opencode-review.yml  python-citest.yml  python-package.yml  python-publish.yml
array/: array.py  example.ipynb
array/configs/: atca_750c.geodetic.yaml  atca_ew214.geodetic.yaml  atca_ew352.geodetic.yaml  atca_h75.geodetic.yaml  ngvla-mid-subarray-revC.geodetic.yaml  ngvla-plains-revC.geodetic.yaml  ngvla-sba-revC.geodetic.yaml  vla.a.geodetic.yaml  vla.center.yaml  wsrt.center.yaml
docs/: Makefile  cli.rst  conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst  requirements.txt
docs/api/: index.rst
docs/concepts/: ms-conventions.rst  schemas.rst  skysim.rst  telsim.rst
docs/description/: description.rst
docs/how-to/: how-to.rst
docs/reference/: reference.rst
docs/source/: Usage.md  Usage.rst  conf.py  index.rst
docs/source/how-to/: installation.rst  skysim_usage.rst  telsim_usage.rst  usage.rst
docs/source/reference/: reference.rst  schemas.rst  skysim_reference.rst  skysim_refernce.rst  telsim_reference.rst
docs/source/tutorials/: skysim_tut.rst  telsim_tut.rst  tutorials.md  tutorials.rst
docs/tutorials/: tutorials.rst
simms/: __init__.py  catalogue.txt  config_spec.py  constants.py  exceptions.py  utilities.py
simms/apps/: main.py  primary_beam.py  simms-cabs.yaml  skysim.py  skysim.yaml  telsim.py  telsim.yaml
simms/parser_config/: __init__.py  catalogue.py  lib.yaml  observe.py  observe.yaml  simms-cabs.yaml  skysim.py  skysim.yaml  telescope.py  telescope.yaml  telescopesimulator.yaml  telsim.py  telsim.yaml  utils.py
simms/schemas/: aegean_source_mapper.yaml  bdsf_gaul_source_mapper.yaml  schema_antenna.yaml  schema_array.yaml  schema_freq.yaml  schema_observation.yaml  schema_source.yaml  source_schema.yaml  sys_noise.yaml  wsclean_source_mapper.yaml
simms/skymodel/: __init__.py  ascii_skies.py  beams.py  catalogue.py  catalogue_reader.py  converters.py  fits_skies.py  fits_spectrum.py  fitstools.py  kernels.py  mstools.py  pb_ops.py  predict_vis.py  skydef.py  skymods.py  skysims.py  skyspec.py  skyspec.yaml  source_factory.py  wsclean_skies.py
simms/skymodel/beam_data/: MKAT-AA-L-JIM-2020.csv  MKAT-EA-S3-JIM-2026.csv  NOTICE
simms/telescope/: array_utilities.py  array_utils.py  generate_ms.py  ms_corr_types.yaml  teldef.py
simms/telescope/layouts/: WSRT.geodetic.yaml  __init__.py  antfile.yaml  atca.center.yaml  atca_1.5a.geodetic.yaml  atca_1.5b.geodetic.yaml  atca_1.5c.geodetic.yaml  atca_1.5d.geodetic.yaml  atca_122c.geodetic.yaml  atca_6a.geodetic.yaml  atca_6b.geodetic.yaml  atca_6c.geodetic.yaml  atca_6d.geodetic.yaml  atca_750a.geodetic.yaml  atca_750b.geodetic.yaml  atca_750d.geodetic.yaml  atca_all.geodetic.yaml  atca_ew367.geodetic.yaml  atca_h168.geodetic.yaml  atca_h214.geodetic.yaml  atca_ns214.geodetic.yaml  dummy_vlbi.yaml  kat-7.center.yaml  kat-7.geodetic.yaml  kat-7.itrf.yaml  layout_schema.yaml  meerkat.center.yaml  meerkat.geodetic.yaml  ngvla-core-revB.geodetic.yaml  ngvla-gb-vlba-revB.geodetic.yaml  ngvla-lba-revC.geodetic.yaml  ngvla-main-revC.geodetic.yaml  ngvla-revC.geodetic.yaml  ska-mid.geodetic.yaml  skamid.geodetic.yaml  vla-a.geodetic.yaml  vla-b.geodetic.yaml  vla-c.geodetic.yaml  vla-d.geodetic.yaml  vla.b.geodetic.yaml  (+10 more)
simms_tests/: ascii_sky_tests.py  ci_flux_test.py  fits_processing_tests.py  meerkatmodel.gaul  pol_test_sky.txt  predict_from_ascii_tests.py  predict_from_cat_tests.py  predict_from_fits_tests.py  telsim_ci_tests.py  telsim_ms_contents_tests.py  telsim_noise_tests.py  telsim_unit_tests.py  testsky.txt  transient_tests.py
simms_tests/cont-int/: test-skysim.yaml
skymodel/: schema_freq.py  schema_freq.yaml  schema_freq1p0.py  skydef.py  skyspec.py  test_freq.py  utilities.py
src/simms/: utilities.py
src/simms/apps/: main.py  primary-beam.yaml  primary_beam.py  simms-cabs.yaml  skysim.py  telsim.py
src/simms/schemas/: aegean_source_mapper.yaml  bdsf_gaul_source_mapper.yaml  source_schema.yaml  wsclean_source_mapper.yaml
src/simms/skymodel/: ascii_skies.py  aterms.py  beams.py  fits_skies.py  mstools.py  pb_ops.py  source_factory.py  wsclean_skies.py
src/simms/skymodel/beam_data/: MKAT-AA-UHF-JIM-2020.csv  MKAT-EA-L-JIM-2026.csv  MKAT-MA-L-JIM-2026.csv  MKAT-MA-S-JIM-2020.csv  NOTICE
src/simms/telescope/: array_utilities.py  generate_ms.py
src/simms/telescope/layouts/: __init__.py  vla-c.geodetic.yaml  vla-d.geodetic.yaml  wsrt.geodetic.yaml
telescope/schemas/: array_schema.yaml
tenv/: pyvenv.cfg
tests/: README.rst  __init__.py  aegean.yaml  ascii_sky_tests.py  aterm_tests.py  beam_tests.py  casa_roundtrip_tests.py  catalogue_template.yaml  chunking_tests.py  ci_test_telsim.py  fits_processing_tests.py  kernels_tests.py  line-cont.txt  line-sky.txt  line.txt  map.yaml  mapping.yaml  meerkatmodelmap.yaml  noise_tests.py  pol_tests.py  predict_ascii_tests.py  predict_beam_e2e_tests.py  predict_fits_tests.py  predict_from_cat_tests.py  predict_from_fits_tests.py  predict_wsclean_tests.py  primary_beam_tests.py  skyspec.yaml  skyspec_test.py  telsim_ci_tests.py  telsim_unit_tests.py  telspec_test.py  testsky.txt  utilities.py  utilities_tests.py  utils.py
tests/cont-int/: test-skysim.yaml  test-telsim.yaml
