[project]
name = "simms"
version = "3.0beta3"
description = "Simms 3.0. Tool for end-to-end simulations of radio inteferometer observations"
authors = [
    {name="Sphesihle Makhathini", email="sphemakh@gmail.com"},
    {name="Mika Naidoo", email="mika.naidoo25@gmail.com"},
    {name="Mukundi Ramanyimi", email="ramayimimukundi6@gmail.com"},
    {name="Shibre Semane", email= "sshibre0@gmail.com"},
    {name="Galefang Mapunda", email="allymap@gmail.com"},
    {name="Senkhosi Simelane", email="senkhxsi@gmail.com"},
    ]

readme = "README.rst"
license = "GPL-3.0"
license-files = ["LICENSE"]
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy",
    "tdqm",
    "click>=8.1.3,<9.0",
    "dask-ms[xarray]>=0.2.18,<1.0",
    "ephem>=4.1,<5.0",
    "scabha @ git+https://github.com/caracal-pipeline/scabha ; python_version >= '3.11'",
    "codex-africanus[complete]>=0.3.7,<1.0",
    "fitstoolz @ git+https://github.com/caracal-pipeline/fitstoolz"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = ["simms"]

[tool.hatch.build.targets.wheel]
include = ["simms"]

[project.scripts]
simms = "simms.parser_config:cli"


[project.urls]
Documentation = "https://simms.readthedocs.org"
Repository = "https://github.com/wits-cfa/simms.git"
"Issue Tracker" = "https://github.com/wits-cfa/simms/issues"
Changelog = "https://github.com/wits-cfa/simms/blob/master/CHANGES.md"

[dependency-groups]
tests = [
    "pytest>=7.1.3,<8.0",
    "flake8",
    "matplotlib",
]
docs = [
    "Sphinx>=8.1,<9.0",
    "sphinx-copybutton",
    "sphinx-rtd-theme",
    "sphinx_click",
    "sphinx-autodoc-typehints",
    "docutils",
]
dev = [
    "jupyter",
    "matplotlib",
]
