[project]
name = "simms"
version = "3.0beta3"
description = "Simms 3.0. Tool for end-to-end simulations of radio inteferometer observations"
authors = [
    {name="Sphesihle Makhathini", email="sphemakh@gmail.com"},
    {name="Mika Naidoo", email="mika.naidoo25@gmail.com"},
    {name="Mukundi Ramanyimi", email="ramayimimukundi6@gmail.com"},
    {name="Shibre Semane", email= "sshibre0@gmail.com"},
    {name="Galefang Mapunda", email="allymap@gmail.com"},
    {name="Senkhosi Simelane", email="senkhxsi@gmail.com"},
    ]

readme = "README.rst"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy",
    "scipy",
    "astropy",
    "tqdm",
    "click>=8.1.3,<9.0",
    "dask-ms[xarray]>=0.2.18,<1.0",
    "ephem>=4.1,<5.0",
    "scabha>=2.2.0rc2",
    "codex-africanus[complete]>=0.3.7,<1.0",
    "ducc0",
    "fitstoolz>=0.1.0b3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/src/simms",
    "/README.rst",
    "/LICENSE",
    "/CHANGES.md",
    "/AGENTS.md",
    "/CONTRIBUTING.md",
    "/CODE_OF_CONDUCT.md",
    "/SECURITY.md",
    "/CITATION.cff",
    "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/simms"]

[project.scripts]
simms = "simms.apps.main:cli"


[project.urls]
Documentation = "https://simms.readthedocs.io"
Repository = "https://github.com/wits-cfa/simms.git"
"Issue Tracker" = "https://github.com/wits-cfa/simms/issues"
Changelog = "https://github.com/wits-cfa/simms/blob/main/CHANGES.md"

[dependency-groups]

ruff = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.9",
]

tests = [
    "pytest>=9.0.3",
    {include-group = "ruff"},
]

# Opt-in: the CASA round-trip test (tests/casa_roundtrip_tests.py) images MSs with
# casatasks.tclean. Heavy (pulls casatools) so it is kept out of the default `tests`
# group; the test itself skips when casatasks is absent. Run with:
#   uv run --group tests --group casa python -m pytest tests/casa_roundtrip_tests.py
casa = [
    "casatasks>=6.6",
]

docs = [
    "Sphinx>=7.0,<9.0",
    "furo>=2024.1",
    "myst-parser>=2.0",
    "sphinx-copybutton",
    "sphinx_click",
    "sphinx-autodoc-typehints",
    "docutils",
    "sphinxcontrib-autoyaml",
]

dev = [
    "jupyter",
    "matplotlib",
    {include-group = "ruff"},
]

[tool.pytest.ini_options]
python_files = ["*_tests.py"]
testpaths = ["tests"]
pythonpath = ["src"]
